# varon-t

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  INSTALL  README.md
.buzzy/: links.yaml  package.yaml
docs/: CMakeLists.txt  conf.py  example.rst  index.rst  introduction.rst  producers.rst  queue-management.rst  value-objects.rst  yield-strategies.rst
docs/old/: CMakeLists.txt  consumers.rst  index.rst  introduction.rst  queue-management.rst
include/: CMakeLists.txt  vrt.h
include/vrt/: atomic.h  error.h  queue.h  state.h  value.h  yield.h
src/: APPNAME.pc.in  CMakeLists.txt  varon-t.pc.in
src/libvaron-t/: dummy.c
src/libvrt/: queue.c  yield.c
tests/: CMakeLists.txt  test-perf-dq.c  test-vrt.c
tests/include/: helpers.h  integers.h  queue.h
tests/lib/: integers.c  queue.c
